fixed bug with search bar covering edit profile button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -165,6 +165,7 @@ div.search-bar {
   top: 5px;
   margin-left: 200px;
   width: 580px;
+  height: 20px;
 }
 
 input.query {
